<resources>
    <string name="app_name">OstaGram</string>
    <string name="ostagram">Ostagram</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="create_account">ایجاد حساب کاربری</string>
    <string name="ورود">login</string>

    <string name="fill_username">لطفا نام کاربری را وارد نمایید</string>
    <string name="fill_password">لطفا رمز را وارد نمایید</string>
    <string name="login_error">خطا در وورد</string>

    <string name="error_server">SERVER ERROR</string>
    <string name="ads">Ads</string>

</resources>
