<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />


    <item
        android:id="@+id/item_add_post"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/add_post" />


    <item
        android:id="@+id/item_likes"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorite" />


    <item
    android:id="@+id/item_profile"
    android:icon="@drawable/ic_account_circle_black_24dp"
    android:title="@string/profile" />


</menu>