<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rel_main"
    android:layout_height="match_parent">




    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">



            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_mobile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>





            <!-- Signup Button -->
            <Button
                android:id="@+id/btn_signin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_purchase"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:text="@string/ورود"/>

            <TextView
                android:id="@+id/link_create"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/create_account"
                android:gravity="center"
                android:textSize="16dip"/>

        </LinearLayout>
    </ScrollView>

  <!--  <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_fileName="circleloading.json"
        app:lottie_loop="true"
        android:visibility="visible"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true" />-->


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ads"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_ads"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>
